SubVersion: $Id$

To do:
	- video scaling
	- link port is broken (HW2 only ?!)
	- stealth I/O and mem protect (done but not enabled)

- 20/04/2005, version 1.80t:
	- [roms]  $1152: fixed RAM space on Titanium
	- [kevin] $1156: added detection for WinXP with classic theme.
	- [roms]  $1161: fixed window position again (better fix-up)
	- [roms]  $1162: save main window position
	- [roms]  $1163: implementing receive file feature
	- [roms]  $1166: merged Christian Walther's patch for Mac OS-X port.
	- [kevin] $1167: increased link timeout from 10 to 60s.
	- [roms]  $1172: added receive of file
	- [roms]  $1173: improved to support group files
	- [roms]  $1176: show a dialog box when a file is received
	- [roms]  $1177: file receiving can be disabled for games which uses linkport for sound
	- [roms]  $1182: TI89 Titanium entry was missing in the communication box
	- [roms]  $1183: iPAQ: glade callbacks were not found due to a missing --export-dynamic
	- [roms]  $1185: clean-up and improvements in the skin loader (no tmp file any longer)
					 improvements in the skin loading (avoid multiple loading and load only when necessary)
	- [roms]  $1188: removed flicker at startup, code slightly reworked

- 11/04/2005, version 1.80s:
	- [roms]  $1102: fixed old file selector
	- [kevin] $1112: fix incorrect shift of rom_base in handles.c.
	- [kevin] $1112: fix several HW protection bugs which prevented booting TI-89 Titanium AMS 3.01.
	- [kevin] $1112: fix and enable HW2/HW3 FlashROM execution protection.
	- [kevin] $1114: properly step over jsr _bcd_math calls.
	- [roms]  $1116: don't use libtool and fixed UAE makefile for cross-compilign support.
	- [roms]  $1137: fixed clock on HW2
	- [roms]  $1143: fixed preloading of debugger 
	- [roms]  $1145: can sort ROM calls by addr, name or id
	- [roms]  $1146: fix-up window size/position with border size
	- [roms]  $1147: fixed possible bad selection location in mem, stack and code windows