@@ -39,7 +39,10 @@
 <h1>6. Popup menu</h1>
 By clicking the right button menu anywhere on the main window, you gain
 access to the functionnalities of the emulator. If you let your mouse
-cursor on the item during some while, a tooltip will appear. The menu
+cursor on the item during some while, a tooltip will appear.<br>
+On iPAQ, you have to touch-point on the LCD region.<br>
+<br>
+The menu
 is organized as follow :<br>
 <div style="text-align: center;"><img alt="" src="popup_menu.png"
  style="width: 184px; height: 323px;"><br>
